# GPX1

./: .gitignore  README.md  TODO.txt  pyproject.toml  test.gpx
data/: output.gpx  test1.gpx  test3.gpx  test5.gpx  test6.gpx  test8.gpx
doc/: .~lock.Lastenheft.docx#  .~lock.Pflichtenheft.docx#  Bedienungshandbuch.docx  Lastenheft.docx  Pflichtenheft.docx  Test_mit_GPX_V1.0.docx  Test_v1.5_GPX1.docx  Test_v1.6_GPX1.docx  Test_v1.7_GPX1.docx  Test_v1.8_GPX1.docx  Test_v1.8_GPX1_2.docx  Testfallspezifikation.docx  Testfallspezifikation_PaFeLe²KyLu-Industries.docx  Testfallspezifikationfinal.docx  Zeitplan.gan  ~$st_v1.8_GPX1.docx  ~$st_v1.8_GPX1_2.docx
src/: gpx1.py
src/gpx1/: __init__.py  config.py  file_management.py  input_type.py  metadata.py  parser.py  programm als exe.txt  routes.py  routs.py  test222.py  test_tracks.py  track.py  track_module.py  tracks.py  usefull.py  waypoints.py
